Add more Sapien hotkeys

--- a/src/content/h1/tools/hek/sapien/page.yml
+++ b/src/content/h1/tools/hek/sapien/page.yml
@@ -9,6 +9,8 @@ keywords:
     - scenario
 toolName: Sapien
 thanks:
+  General_101:
+    en: Additional Sapien hotkey documentation
   The Cereal Killer:
     en: Discovering Sapien keyboard shortcuts
   kirby_422:
