Fix build issue on image name

--- a/src/content/h1/tools/aether/page.yml
+++ b/src/content/h1/tools/aether/page.yml
@@ -14,4 +14,7 @@ keywords:
     - radiosity
     - max
     - maya
+thanks:
+  Reindeer:
+    en: Porting Aether documentation from ModaWiki
 toolName: Aether
