Add bsp cluster sky index notes

--- a/src/content/h1/tags/scenario_structure_bsp/page.yml
+++ b/src/content/h1/tags/scenario_structure_bsp/page.yml
@@ -20,3 +20,5 @@ thanks:
     en: Research on weather polyhedra and portals
   Conscars:
     en: Collision BSP structure and phantom BSP research
+  Galap:
+    en: Researching the effect of cluster sky index on lighting
