--- a/src/content/h1/tags/sky/page.yml
+++ b/src/content/h1/tags/sky/page.yml
@@ -1,6 +1,9 @@
 title:
   en: sky
 img: sky.jpg
+thanks:
+  Galap:
+    en: Researching the purpose of _affects interiors_
 imgCaption:
   en: >-
     The skybox is a fully 3D object at a much larger scale than the
