Expand on vidmode behaviour in arguments page

--- a/src/content/h1/arguments/page.yml
+++ b/src/content/h1/arguments/page.yml
@@ -2,4 +2,4 @@ title:
   en: Startup arguments and init.txt
 thanks:
   nToss:
-    en: Information on timedemo
+    en: Information on timedemo and vidmode
