H1 tool touchups, phantom_tool

--- a/src/content/h1/tools/hek/tool/page.yml
+++ b/src/content/h1/tools/hek/tool/page.yml
@@ -15,3 +15,5 @@ thanks:
     en: Hardcoded tag patch reversing
   MosesOfEgypt:
     en: Explanation of radiosity passes
+  General_101:
+    en: Documenting tool commands
