--- a/src/data/h1/tags/shader_environment.yml
+++ b/src/data/h1/tags/shader_environment.yml
@@ -24,9 +24,15 @@ comments:
         - name: blended base specular
           en: ...
     - name: lens flare spacing
-      en: ...
+      en: >
+        Determines how far apart [BSP lens flares][scenario_structure_bsp#lens-flare-markers]
+        are generated, in world units, along a surface part using this shader.
+        If set to `0`, a single lens flare will be created at the center of the
+        surface.
     - name: lens flare
-      en: ...
+      en: >
+        References the lens flare to be rendered at the generated lens flare markers.
+        If empty, no lens flares will be generated.
     - name: diffuse flags
       en: ...
       fields:
