--- a/build-config.json
+++ b/build-config.json
@@ -5,7 +5,7 @@
     "srcPages": [
       "./src/content/**/readme.md",
       "./src/content/**/page.yml",
-      "./src/content/**/*.(jpg|jpeg|png|gif|ms|dot|neato|fdp|sfdp|twopi|circo)",
+      "./src/content/**/*.(mp4|jpg|jpeg|png|gif|ms|dot|neato|fdp|sfdp|twopi|circo)",
       "./src/data/**/*.yml"
     ],
     "srcContentBase": "./src/content",
