--- a/src/content/h1/tools/ghostbuster/page.yml
+++ b/src/content/h1/tools/ghostbuster/page.yml
@@ -3,6 +3,14 @@ title:
 img: phantom.jpg
 imgCaption:
   en: A case of phantom BSP in Danger Canyon.
+alerts:
+  - type: danger
+    md:
+      en: >
+        Ghostbuster should only be used as a tool of last resort if you do not
+        have access to the source [JMS][] for a BSP. Ghostbuster can create
+        collision holes and misses some phantom BSP. Otherwise, use [phantom_tool][]
+        to compile a BSP from JMS without phantom BSP.
 info:
   en: |
     * [Sources and download](https://github.com/Sigmmma/ghostbuster)
