Copy editing of H2EK content, add new workflows

--- a/src/content/general/tools/blender/page.yml
+++ b/src/content/general/tools/blender/page.yml
@@ -2,7 +2,7 @@ title:
   en: Blender
 img: blender.jpg
 imgCaption:
-  en: 'Blender being used to model a [BSP][scenario_structure_bsp]'
+  en: 'Blender being used to model a [BSP][h1/tags/scenario_structure_bsp]'
 stub: true
 keywords:
   en:
