--- a/src/content/h1/tags/scenario_structure_bsp/page.yml
+++ b/src/content/h1/tags/scenario_structure_bsp/page.yml
@@ -14,7 +14,7 @@ keywords:
     - weather
     - polyhedra
     - bsp
-tagName: scenario_structure_bsp
+tagName: h1/scenario_structure_bsp
 thanks:
   MosesOfEgypt:
     en: Research on weather polyhedra and portals
