--- a/src/content/h1/tools/hek/page.yml
+++ b/src/content/h1/tools/hek/page.yml
@@ -3,7 +3,7 @@ title:
 img: hek.jpg
 imgCaption:
   en: >-
-    Sapien, Guerilla, and Tool can still be run on modern Windows systems and
+    [Sapien][], [Guerilla][], and [Tool][] can still be run on modern Windows systems and
     even on Linux with Wine
 info:
   en: >
