--- a/src/content/h2/tools/h2ek/page.yml
+++ b/src/content/h2/tools/h2ek/page.yml
@@ -3,11 +3,11 @@ title:
 img: h2ek.jpg
 imgCaption:
   en: >-
-    H2Sapien, H2Guerilla, and H2Tool can still be run on modern Windows systems
+    [H2Sapien][], [H2Guerilla][], and [H2Tool][] can still be run on modern Windows systems
 info:
   en: >
     * Release date: 2007
-    
+
 stub: true
 toolName: H2EK
 alerts:
