--- a/src/content/page.yml
+++ b/src/content/page.yml
@@ -8,12 +8,6 @@ keywords:
     - inicio
 alerts:
   - md:
-      es: >
-        Este sitio web todavía está en [desarrollo activo](https://github.com/Sigmmma/c20).
-        La creación de contenido se prioriza en función de los [resultados][survey]
-        de la encuesta comunitaria de 2020 y eventos de apoyo como el
-        [concurso de creación de mapas](https://discord.reclaimers.net).
       en: >
-        This website is still under [active development](https://github.com/Sigmmma/c20).
-        Content creation is prioritized based on the 2020 community [survey results][survey]
-        and supporting events like the [map-making contest](https://discord.reclaimers.net).
+        This website is still under active development!
+        If you would like to contribute, see our [Github project](https://github.com/Sigmmma/c20#contributing).
