Implement basic new YAML struct renderer, model_collision_geometry notes

--- a/src/content/h1/tools/hek/tool/page.yml
+++ b/src/content/h1/tools/hek/tool/page.yml
@@ -17,3 +17,5 @@ thanks:
     en: Explanation of radiosity passes
   General_101:
     en: Documenting tool commands
+  Kavawuvi:
+    en: Warning about Tool only using marker from superhigh LOD
