Copy editing for blender level guides

--- a/src/content/h1/guides/map-making/blender-level-guide/blender-prep/page.yml
+++ b/src/content/h1/guides/map-making/blender-level-guide/blender-prep/page.yml
@@ -1,6 +1,9 @@
 title:
-  en: Blender Prep- H1 Level Guide
+  en: H1 Blender level guide - Blender prep
 keywords:
   en:
     - modeling
     - exporter
+thanks:
+  General_101:
+    en: Writing this guide
