--- a/src/content/h1/guides/map-making/blender-level-guide/level-creation-advanced/page.yml
+++ b/src/content/h1/guides/map-making/blender-level-guide/level-creation-advanced/page.yml
@@ -1,6 +1,9 @@
 title:
-  en: Advanced - H1 Level Guide
+  en: H1 Blender level guide - Advanced
 keywords:
   en:
     - modeling
     - exporter
+thanks:
+  General_101:
+    en: Writing this guide
