--- a/src/data/h1/tags/lens_flare.yml
+++ b/src/data/h1/tags/lens_flare.yml
@@ -2,7 +2,9 @@ name: lens_flare
 id: lens
 invaderStructName: LensFlare
 comments:
-  en: ...
+  en: >
+    A 2D sprite which can fade by distance and angle. Can be part of a [light][]
+    or attached to [the BSP][scenario_structure_bsp#lens-flare-markers].
   fields:
     - name: falloff angle
       en: ...
