--- a/build-config.json
+++ b/build-config.json
@@ -4,7 +4,8 @@
     "distAssets": "./dist/assets/",
     "srcPages": [
       "./src/content/**/readme.md",
-      "./src/content/**/page.yml",
+      "./src/content/**/readme_*.md",
+      "./src/content/**/*.yml",
       "./src/content/**/*.(mp4|jpg|jpeg|png|gif|ms|dot|neato|fdp|sfdp|twopi|circo)",
       "./src/data/**/*.yml"
     ],
