--- a/src/content/h1/engine/files/page.yml
+++ b/src/content/h1/engine/files/page.yml
@@ -14,3 +14,5 @@ thanks:
     en: Control binding ranges
   Conscars:
     en: Additional blam.sav reversing
+  nToss:
+    en: Researching offsets for profile input bindings and other fields
